--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "husky": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -44,8 +43,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "prettier": "^2.7.0",
     "pretty-quick": "^3.1.3"
   }
